--- a/configs/.env
+++ b/configs/.env
@@ -1,3 +1,9 @@
 SERVER_HOST=127.0.0.1
 SERVER_PORT=8080
 SECURE_KEY=ASDASDFDSAFGSDGFSAFSADASDGDSVZX
+
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=MultiSocketDB
